[package]
name = "is25lp064a"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An embedded-hal driver for the IS25LP064A"
homepage = "https://github.com/tweedegolf/IS25LP064A"
repository = "https://github.com/tweedegolf/IS25LP064A"
readme = "README.md"
keywords = ["no_std", "embedded", "flash", "is25lp064a"]
authors = [
    "Dion Dokter",
]

[dependencies]
embedded-hal = "1.0.0"
embedded-storage = "0.3.0"
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-storage-async = { version = "0.4.0", optional = true }
defmt = { version = "0.3", optional = true }

[features]
default = ["readback-check", "async"]
async = ["dep:embedded-hal-async", "dep:embedded-storage-async"]
defmt = ["dep:defmt"]
readback-check = []
